assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;700&family=Kaushan+Script&display=swap');


* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    width: 100vw;
    height: auto;
}

header {
    position: sticky;
    top: 0;
    left: 0;
    width: 100%;
    clear: both;
}

h1 {
    font-family: 'Kaushan Script', cursive;
    font-size: x-large;
    margin: 0 10px;
    text-align: center;
}

#nav-bar {
    background-color: #f2f29b;
    display: block;
    width: 100%;
    margin: 0 auto;
    overflow: hidden;
}

#navigation-menu {
    list-style-type: none;
    direction: rtl;
    clear: both;
}

a.nav-link {
    display: block;
    float: left;

    text-align: center;

    color: white;
    background-color: #1e4b80;
    border-radius: 5px;
    text-decoration: none;
    min-height: 40px;
    padding: 5px;

    font-size: small;

    height: 80%;
    margin: 1%;
    width: 20%;

}
 /* Set margin to the icon to create gap between Text and icon */
 i {
    margin-right: 10px;
 }
a.nav-link:hover {
    background-color: gray;
}

a.nav-link:active {
    transform: translateY(5px);
}

a.open {
    text-decoration: underline;
    background-color: #f2f29b;
    border: 1px solid #d1d106;
    color:#072241;
}

.wallpaper {
    background: linear-gradient(rgba(250, 250, 250, 0.9), rgba(249, 254, 222, 0.8),
            rgba(250, 250, 250, 0.9)), url('../img/dragon.png');
    height: 100%;

}

/* index.html - introduction article */
.portrait-heading {
    height: 30vh;
    width: auto;
    float: none;
    background-color: #c0c0c0;
    text-align: center;
    margin-top: 5px;
}

.portrait-heading img {
    height: 30vh;
    width: auto;
    margin: auto;
}

.portrait-text {
    border: 1px solid white;
    height: 30vh;
    background-color: #fafae1;
    flex: 1 1 auto;
    overflow: scroll;
    margin: 5px;
}

.portrait-text>p {
    font-size: large;
    margin: 10px;
    height: auto;
    text-align: justify;
}

/* index.html - phylosphy section */
#philosophy {
    background-color: #1e4b80;
    clear: left;
    height: auto;
    color: lightyellow;    
    border: 5px solid #033b7a;
    
    font-family: 'Kalam', cursive;
}

#quotes {
    background-color: #1e4b80;
    color: lightyellow;   
    border: 5px solid #033b7a; 

    font-family: 'Kalam', cursive;
    height: auto;
}

#quotes-container {
    width:100%;
}

#philosophy h2,
#quotes h2 {
    font-size: 33px;
    border-color: white;
    border-top: 1px;
    border-left: 1px;
    border-bottom: 3px;
    border-right: 3px;
    border-style: solid;
    background-color: #033b7a;
    text-align: center;
}

#philosophy p,
#quotes p {
    flex: 1 1 auto;
    height: 100%;
    font-size: large;
    background-color: #033b7a;
    padding: 10px;
}
   

#quotes p {
    border-style: solid;
    border-width: 5px;

    border-top-color:#889eb7;
    border-right-color: #355a84;
    border-bottom-color: #072241;
    border-left-color: #3b5e86;
}

.border-ridge {
    border-style: solid;
    border-width: 5px;

    border-top-color:#889eb7;
    border-right-color: #355a84;
    border-bottom-color: #072241;
    border-left-color: #3b5e86;
}

#video-1 {
    margin: 20px;
}

#quotes p {
    margin: 20px;
    line-height: 20px;
    text-align: justify;
}

/* Adjust the video size to a smaller screen */
#video-1 {
    width:270px;    
}

/* movies.html */
.movie-collection {
    width: inherit;
    height: auto;
    text-align: center;
}

.movie-box {
    width: 300px;
    height: 500px;
    font-family: 'Kaushan Script', cursive;
    display: inline-block;
    overflow: hidden;
}

.movie-box img {
    width: auto;
    height: 70%;

}

.movie-box p {
    font-size: small;
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
}

/* mma.html - Martial Arts Page */
#impact-on-mma {
    display: block;
}

#impact-on-mma h1 {
    float: none;
    text-align: center;
    font-family: 'Kalam', cursive;
}

#impact-on-mma h2 {
    float: none;
    text-align: center;
    font-family: 'Kalam', cursive;
}

#impact-on-mma p {
    margin: 5px;
}

/* books.html */
#book-window {
    text-align: center;
    clear:both;
}

.book-showcase {
    text-align: center;
    width:300px;
    height: 750px;
    margin: 0 auto;
    overflow:scroll;
    
    font-size: large;
    display:inline-block;
    vertical-align: top;

    box-sizing: border-box;
    border-color: #033b7a;
    border-width: 2px;
    border-top-style: dotted;
    border-right-style: solid;
    border-bottom-style: solid;
    border-left-style: dotted;
}
.book-showcase h2 {
    height: 100px;
}
.book-showcase img {
    width: auto;
    height: 400px;    
    overflow: hidden;
}

#bookorder-form {
    width:100%;
    height:auto;
}

#bookorder-form label {
    color: white;
    line-height: 30px;
}

.input-field {
    border: 1px solid black;
    display: inline;
    width: 270px;
    height: 30px;
}


.submit-button {
    background-color: #1e4b80;
    color: white;
    border-radius: 25px;
    padding: 10px;
    margin: 10px 0;
    width: 300px;
    border-color: aliceblue;
    border: 3px solid;
}

.submit-button:hover {
    background-color: white;
    color: #1e4b80;
}

.submit-button:active {
    transform: translateY(5px);
}

#bookorder-form>fieldset {
    border: 2px groove;
    margin: 10px;
    padding: 10px;
    background-color: #0d4f7a;
    display:block;
}

legend {    
    background-color: #5a5b5c;
    color: #f3f5d9;
    padding: 10px;
    border-style: groove;
    border: 5px solid #56677b;
    border-radius: 10px;

    text-transform: uppercase;
}

/* footer */
footer {
    background-color: rgb(92, 86, 86);
    color: white;
    height: 5vh;
    bottom: 0;
}

/* media query for tablets */

@media only screen and (min-width: 640px) {
    h1 {
        margin: 0 20px;
        text-align: left;
        float: left;
    }

    #nav-bar {
        float: none;
    }

    #navigation-menu {
        clear: none;
    }

    .portrait-heading {
        height: 30vh;
        width: auto;
        float: left;
        clear: left;
        background-color: #c0c0c0;
    }

    #portrait-text {
        display: flex;
        flex: 1 1 auto;
        height: 15%;
        float: left;
    }

    a.nav-link {
        width: 17%;
        margin: 10px;
        min-height: auto;
        height: 80%;
    }

    a.nav-link:hover {
        background-color: gray;
    }

    a.nav-link:active {
        transform: translateY(5px);
    }

    #philosophy {
        background-color: #1e4b80;
        clear: left;
        height: auto;
    }

    #quotes-container {
        width:calc(100% - 510px);
    }

    #video-1 {
        float: right;
        width:480px;
    }

    /* movies page - mma.html */
    #movie-box {
        display: block;
    }

    /* books page - books.html */
    #bookorder-form {
        width: 640px;
        margin: 0 auto;
    }

    

    #bookorder-form label {
        width: 300px;
        display: inline-block;
    }

    footer {
        clear: both;
    }
}

/* media query for desktops */
@media screen and (min-width: 1200px) {
    body {
        width: 80vw;
        margin: 0 auto;
    }

    h1 {
        margin: 0 50px;
    }

    a.nav-link {
        width: 15%;
    }

    /* books page - books.html */
    #bookorder-form {
        width: 940px;
        line-height: 40px;
        margin: 0 auto;
    }

    #bookorder-form label {
        width: 400px;
        display: inline-block;
        margin-left: 40px;
    }
    .input-field {
        width: 400px;
    }

    .submit-button {
        width: 400px;
    }

}

